test/expected/declare_o_less_eq_greater_2rck_a-c++17.out
declare <=> as operator (reference to const S, reference to const S) returni...
        ^
9: error: overloading operator "<=>" not supported until C++20
